# home-clean-mobile-robot

./: .gitignore  README.md  deps.repos  install_deps.sh
docs/: user_guide.md
src/clean_robot_pkg/: CMakeLists.txt  package.xml
src/clean_robot_pkg/config/: coverage_params.yaml  nav2_params.yaml  slam_params.yaml
src/clean_robot_pkg/docs/: architecture.puml
src/clean_robot_pkg/include/clean_robot_pkg/: coverage_client_node.hpp  coverage_path_manager.hpp  map_to_polygon_node.hpp  robot_facade.hpp
src/clean_robot_pkg/include/clean_robot_pkg/strategies/: i_cleaning_strategy.hpp  zigzag_strategy.hpp
src/clean_robot_pkg/launch/: 01_gazebo_slam.launch.py  02_save_map.launch.py  03_navigation.launch.py  04_coverage_clean.launch.py
src/clean_robot_pkg/maps/: README.md  house_map.pgm  house_map.yaml
src/clean_robot_pkg/rviz/: clean_robot.rviz
src/clean_robot_pkg/scripts/: coverage_client_node.py  map_to_polygon_node.py  path_manager.py
src/clean_robot_pkg/src/coverage_client/: coverage_client_node.cpp  coverage_path_manager.cpp  main.cpp  robot_facade.cpp
src/clean_robot_pkg/src/coverage_client/strategies/: zigzag_strategy.cpp
src/clean_robot_pkg/src/map_to_polygon/: main.cpp  map_to_polygon_node.cpp
